--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,20 @@
 <head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css"
+  />
+  <link
+    href="http://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"
+  />
 </head>
 <body>
   <div id="root" />
+
+  <!-- Started receiving random error, researched and was informed to add these tags -->
+  <!-- https://forum.freecodecamp.org/t/uncaught-referenceerror-react-is-not-defined/415604/5 -->
+
+  <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 </body>
